# genai-tools

./: Makefile  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/dotfiles/: .zshrc
tools/weather/: Dockerfile  requirements.txt  weather_server.py  weather_stdio.py
