[project]
name = "genai-playground"
version = "0.1.0"
description = "GenAI Playground with secure file server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.2",
    "pandas>=2.2.3",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "docker>=7.0.0",
    "tenacity>=9.1.2",
    "requests>=2.31.0",
    "langchain-openai>=0.3.16",
    "autosave>=1.0.0.post1",
    "mcp[cli]>=1.8.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.4.5",
    "fastmcp>=2.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "autoflake>=2.3.1",
    "ruff>=0.11.9"
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
